--- a/src/app/admin/profesor/cursosa/cursosa.component.html
+++ b/src/app/admin/profesor/cursosa/cursosa.component.html
@@ -1,1 +1,16 @@
-<p>cursosa works!</p>
+<div class="card">
+    <div class="card-header">
+        <p>Secciones</p>
+    </div>
+    <div class="card-body d-flex">
+        <button class="btn btn-success ml-auto" (click)="registrar()">Registrar notas</button>
+    </div>
+    <div class="card-footer">
+        <div id="myGrid" class="ag-theme-alpine" style="width: 100%; height: 100%">
+            <ag-grid-angular #agGrid style="width: 100%px; height: 500px" class="ag-theme-alpine" [rowData]="rowData"
+                [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" rowSelection="single"
+                (gridReady)="OnGridReady($event)">
+            </ag-grid-angular>
+        </div>
+    </div>
+</div>
