--- a/src/app/admin/profesor/notas/notas.component.html
+++ b/src/app/admin/profesor/notas/notas.component.html
@@ -1,1 +1,22 @@
-<p>notas works!</p>
+<div class="card">
+  <div class="card-header">NOTAS DEL CURSO </div>
+  <div class="card-body">
+    <div class="row mb-1 d-flex">
+      <button type="button" class="btn btn-success ml-auto" (click)="verJson()">Guardar Notas</button>
+    </div>
+    <div id="myGrid" class="ag-theme-alpine" style="width: 100%; height: 100%">
+      <ag-grid-angular
+        #agGrid
+        style="width: 100%px; height: 500px"
+        class="ag-theme-alpine"
+        [rowData]="rowData"
+        [columnDefs]="columnDefs"
+        [defaultColDef]="defaultColDef"
+        rowSelection="single"
+        (gridReady)="OnGridReady($event)"
+        (cellValueChanged)="onCellValueChanged($event)"
+      >
+      </ag-grid-angular>
+    </div>
+  </div>
+</div>
