--- a/src/app/admin/personal/personal.component.html
+++ b/src/app/admin/personal/personal.component.html
@@ -114,7 +114,7 @@
           <div class="col-7">
             <div class="form-group">
               <label for="">Departamento</label>
-              <select name="dep_cod" id="dep_cod" class="form-control form-control-sm" [(ngModel)]="personal.dep_cod" formControlName="depPersonal">
+              <select name="dep_cod" id="dep_cod" class="form-control form-control-sm"  formControlName="depPersonal">
                 <option [value]="dpto.dep_cod" *ngFor="let dpto of departamentos">{{dpto.dep_descripcion}}</option>
                 
               </select>
