--- a/src/app/admin/matricula/matricula.component.html
+++ b/src/app/admin/matricula/matricula.component.html
@@ -159,6 +159,7 @@
         style="width: 100%px; height: 500px"
         class="ag-theme-alpine"
         [rowData]="rowData"
+        [defaultColDef]="defaultColDef"
         [columnDefs]="columnDefs"
         rowSelection="single"
         (gridReady)="OnGridReady($event)"
