--- a/src/app/admin/profesor/principal/sidebarp/sidebarp.component.html
+++ b/src/app/admin/profesor/principal/sidebarp/sidebarp.component.html
@@ -43,7 +43,7 @@
           </a>
         </li>
         <li class="nav-item has-treeview">
-          <a [routerLink]="['notas']" class="nav-link">
+          <a [routerLink]="['perfil']" class="nav-link">
             <i class="nav-icon fas fa-tachometer-alt"></i>
             <p>Perfil</p>
           </a>
