--- a/src/app/admin/shared/sidebar/sidebar.component.html
+++ b/src/app/admin/shared/sidebar/sidebar.component.html
@@ -1,29 +1,23 @@
 
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
-    <a href="index3.html" class="brand-link">
+    <a [routerLink]="['home']" class="brand-link">
       <img
-        src="assets/img/AdminLTELogo.png"
+        src="assets/img/colegio.jpg"
         alt="AdminLTE Logo"
         class="brand-image img-circle elevation-3"
         style="opacity: 0.8"
       />
-      <span class="brand-text font-weight-light">Colegio</span>
+      <span class="brand-text font-weight-light"><p class="fs-5 fw-bolder">Colegio</p></span>
     </a>
   
     <!-- Sidebar -->
     <div class="sidebar">
       <!-- Sidebar user panel (optional) -->
       <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-        <div class="image">
-          <img
-            src="assets/img/user2-160x160.jpg"
-            class="img-circle elevation-2"
-            alt="User Image"
-          />
-        </div>
+        
         <div class="info">
-          <a href="#" class="d-block">ISO</a>
+          <p class="text-center fs-5 fw-bolder" style="color: white;">ISOO - LABORATORIO</p>
         </div>
       </div>
   
@@ -39,8 +33,8 @@
                  with font-awesome or any other icon font library -->
           <li class="nav-item has-treeview">
             <a href="#" target=_self class="nav-link active" >
-              <i class="nav-icon fas fa-tachometer-alt"></i>
-              <p>
+              <i class="fas fa-user-graduate"></i>
+              <p class="ms-2">
                 Alumnos
                 <i class="right fas fa-angle-left"></i>
               </p>
@@ -62,8 +56,8 @@
           </li>
           <li class="nav-item has-treeview">
             <a href="#" class="nav-link active">
-              <i class="nav-icon fas fa-tachometer-alt"></i>
-              <p>
+              <i class="fas fa-book"></i>
+              <p class="ms-2">
                 Cursos
                 <i class="right fas fa-angle-left"></i>
               </p>
@@ -80,8 +74,8 @@
           </li>
           <li class="nav-item has-treeview">
             <a href="#" class="nav-link active">
-              <i class="nav-icon fas fa-tachometer-alt"></i>
-              <p>
+              <i class="fas fa-users"></i>
+              <p class="ms-1">
                 Personal
                 <i class="right fas fa-angle-left"></i>
               </p>
