--- a/src/app/admin/personal/personal.component.html
+++ b/src/app/admin/personal/personal.component.html
@@ -113,7 +113,7 @@
         <div class="row d-flex justify-content-between">
           <div class="col-7">
             <div class="form-group">
-              <label for="">Departamento</label>
+              <label for="">Nivel</label>
               <select name="dep_cod" id="dep_cod" class="form-control form-control-sm"  formControlName="depPersonal">
                 <option [value]="dpto.dep_cod" *ngFor="let dpto of departamentos">{{dpto.dep_descripcion}}</option>
                 
