--- a/src/app/admin/personal/personal.component.html
+++ b/src/app/admin/personal/personal.component.html
@@ -72,7 +72,7 @@
           <div class="col-3">
             <div class="form-group">
               <label for="">Estado civil</label>
-              <select name="per_estadocivil" id="per_estadocivil" class="form-control form-control-sm" [(ngModel)]="personal.per_estadocivil"  formControlName="sexoPersonal">
+              <select class="form-control form-control-sm" [(ngModel)]="personal.per_estadocivil"  formControlName="sexoPersonal">
                 <option value="CASADO">CASADO</option>
                 <option value="SOLTERO">SOLTERO</option>
                 <option value="CONVIVIENTE">CONVIVIENTE</option>
