--- a/src/app/admin/shared/header/header.component.html
+++ b/src/app/admin/shared/header/header.component.html
@@ -4,7 +4,9 @@
       <li class="nav-item">
         <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
       </li>
-      
+      <li class="nav-item">
+        <button type="button" class="btn btn-light" (click)="screen()"><i class="fas fa-expand-arrows-alt"></i></button>
+      </li>
     </ul>
 
     <!-- SEARCH FORM -->
