--- a/src/app/admin/shared/sidebar/sidebar.component.html
+++ b/src/app/admin/shared/sidebar/sidebar.component.html
@@ -1,99 +1,90 @@
-
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
-    <!-- Brand Logo -->
-    <a [routerLink]="['home']" class="brand-link">
-      <img
-        src="assets/img/colegio.jpg"
-        alt="AdminLTE Logo"
-        class="brand-image img-circle elevation-3"
-        style="opacity: 0.8"
-      />
-      <span class="brand-text font-weight-light"><p class="fs-5 fw-bolder">Colegio</p></span>
-    </a>
-  
-    <!-- Sidebar -->
-    <div class="sidebar">
-      <!-- Sidebar user panel (optional) -->
-      <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-        
-        <div class="info">
-          <p class="text-center fs-5 fw-bolder" style="color: white;">ISOO - LABORATORIO</p>
-        </div>
+  <!-- Brand Logo -->
+  <a [routerLink]="['home']" class="brand-link">
+    <img src="assets/img/colegio.jpg" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
+      style="opacity: 0.8" />
+    <span class="brand-text font-weight-light">
+      <p class="fs-5 fw-bolder">Colegio</p>
+    </span>
+  </a>
+
+  <!-- Sidebar -->
+  <div class="sidebar">
+    <!-- Sidebar user panel (optional) -->
+    <div class="user-panel mt-3 pb-3 mb-3 d-flex">
+
+      <div class="info">
+        <p class="text-center fs-5 fw-bolder" style="color: white;">ISOO - LABORATORIO</p>
       </div>
-  
-      <!-- Sidebar Menu -->
-      <nav class="mt-2">
-        <ul
-          class="nav nav-pills nav-sidebar flex-column"
-          data-widget="treeview"
-          role="menu"
-          data-accordion="false"
-        >
-          <!-- Add icons to the links using the .nav-icon class
-                 with font-awesome or any other icon font library -->
-          <li class="nav-item has-treeview">
-            <a href="#" target=_self class="nav-link active" >
-              <i class="fas fa-user-graduate"></i>
-              <p class="ms-2">
-                Alumnos
-                <i class="right fas fa-angle-left"></i>
-              </p>
-            </a>
-            <ul class="nav nav-treeview">
-              <li class="nav-item">
-                <a class="nav-link" [routerLink]="['alumno']" >
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Registrar</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link"  [routerLink]="['matricula']">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Matriculas</p>
-                </a>
-              </li>
-            </ul>
-          </li>
-          <li class="nav-item has-treeview">
-            <a href="#" class="nav-link active">
-              <i class="fas fa-book"></i>
-              <p class="ms-2">
-                Cursos
-                <i class="right fas fa-angle-left"></i>
-              </p>
-            </a>
-            <ul class="nav nav-treeview">
-              <li class="nav-item">
-                <a class="nav-link"[routerLink]="['curso']">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Registrar</p>
-                </a>
-              </li>
-              
-            </ul>
-          </li>
-          <li class="nav-item has-treeview">
-            <a href="#" class="nav-link active">
-              <i class="fas fa-users"></i>
-              <p class="ms-1">
-                Personal
-                <i class="right fas fa-angle-left"></i>
-              </p>
-            </a>
-            <ul class="nav nav-treeview">
-              <li class="nav-item">
-                <a class="nav-link"[routerLink]="['personal']">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Registrar</p>
-                </a>
-              </li>
-              
-            </ul>
-          </li>
-        </ul>
-      </nav>
-      <!-- /.sidebar-menu -->
     </div>
-    <!-- /.sidebar -->
-  </aside>
-  
+
+    <!-- Sidebar Menu -->
+    <nav class="mt-2">
+      <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
+        <!-- Add icons to the links using the .nav-icon class
+                 with font-awesome or any other icon font library -->
+        <li class="nav-item has-treeview">
+          <a href="#" target=_self class="nav-link">
+            <i class="fas fa-user-graduate"></i>
+            <p class="ms-2">
+              Alumnos
+              <i class="right fas fa-angle-left"></i>
+            </p>
+          </a>
+          <ul class="nav nav-treeview">
+            <li class="nav-item">
+              <a class="nav-link" [routerLink]="['alumno']">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Registrar</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" [routerLink]="['matricula']">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Matriculas</p>
+              </a>
+            </li>
+          </ul>
+        </li>
+        <li class="nav-item has-treeview">
+          <a href="#" class="nav-link">
+            <i class="fas fa-book"></i>
+            <p class="ms-2">
+              Cursos
+              <i class="right fas fa-angle-left"></i>
+            </p>
+          </a>
+          <ul class="nav nav-treeview">
+            <li class="nav-item">
+              <a class="nav-link" [routerLink]="['curso']">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Registrar</p>
+              </a>
+            </li>
+
+          </ul>
+        </li>
+        <li class="nav-item has-treeview">
+          <a href="#" class="nav-link">
+            <i class="fas fa-users"></i>
+            <p class="ms-1">
+              Personal
+              <i class="right fas fa-angle-left"></i>
+            </p>
+          </a>
+          <ul class="nav nav-treeview">
+            <li class="nav-item">
+              <a class="nav-link" [routerLink]="['personal']">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Registrar</p>
+              </a>
+            </li>
+
+          </ul>
+        </li>
+      </ul>
+    </nav>
+    <!-- /.sidebar-menu -->
+  </div>
+  <!-- /.sidebar -->
+</aside>
